--- a/static/oscar/css/styles1.css
+++ b/static/oscar/css/styles1.css
@@ -1410,7 +1410,7 @@ textarea {
 }
 
 a {
-  color: #337ab7;
+  color: #dff707;
   text-decoration: none;
 }
 
@@ -9777,7 +9777,7 @@ a .icon-flip-vertical:before {
 }
 
 body {
-  background-color: #6a0808;
+  background-color: #fdfdfb;
 }
 
 .container-fluid {
