--- a/templates/oscar/partials/brand.html
+++ b/templates/oscar/partials/brand.html
@@ -3,6 +3,11 @@
 
 
 {%  block brand_title %}
+<body>
+    {% load static %}
+    <img src="{% static 'logo.jpg' %}">
+</body>
+
 
 {%  trans "Banana Gorilla Shirts"%}
 
