--- a/templates/oscar/partials/brand.html
+++ b/templates/oscar/partials/brand.html
@@ -3,10 +3,10 @@
 
 
 {%  block brand_title %}
-<body>
+<!-- <body>
     {% load static %}
     <img src="{% static 'logo.jpg' %}">
-</body>
+</body> -->
 
 
 {%  trans "Banana Gorilla Shirts"%}
