--- a/static/oscar/css/styles1.css
+++ b/static/oscar/css/styles1.css
@@ -9777,7 +9777,7 @@ a .icon-flip-vertical:before {
 }
 
 body {
-  background-color: #fdfdfb;
+  background-color: #E3CF57;
 }
 
 .container-fluid {
