--- a/templates/oscar/partials/brand.html
+++ b/templates/oscar/partials/brand.html
@@ -6,8 +6,8 @@
 
 {% load cloudinary %}
  <!--cloudinary -->
- <script src="https://cdnjs.cloudflare.com/ajax/libs/cloudinary-core/2.3.0/cloudinary-core-shrinkwrap.min.js"></script>
-
+ <!-- <script src="https://res.cloudinary.com/dn76rhzjx/image/upload/v1611377531/banana_xhbjet.jpg"></script> -->
+ cloudinary.utils.cloudinary_url("sample.jpg", width = 100, height = 150, crop = "fill")
   <style type="text/css">
  .blog-bg img {
  max-width: 100%;
