--- a/templates/oscar/partials/brand.html
+++ b/templates/oscar/partials/brand.html
@@ -6,8 +6,8 @@
 
 {% load cloudinary %}
  <!--cloudinary -->
- <!-- <script src="https://res.cloudinary.com/dn76rhzjx/image/upload/v1611377531/banana_xhbjet.jpg"></script> -->
- cloudinary.utils.cloudinary_url("sample.jpg", width = 100, height = 150, crop = "fill")
+ <script src="cloudinary.utils.cloudinary_url('sample.jpg', width = 100, height = 150, crop = 'fill')"></script>
+ 
   <style type="text/css">
  .blog-bg img {
  max-width: 100%;
