--- a/templates/oscar/base.html
+++ b/templates/oscar/base.html
@@ -6,3 +6,8 @@
 {%  trans ""%}
 
 {%  endblock %}
+
+{% load static %}
+{% block favicon %}
+        <link rel="shortcut icon" href="{% static 'oscar/logo.jpg' %}" />
+{% endblock %}
