--- a/templates/oscar/base.html
+++ b/templates/oscar/base.html
@@ -7,7 +7,7 @@
 
 {%  endblock %}
 
-{% load static %}
+<!-- {% load static %}
 {% block favicon %}
         <link rel="shortcut icon" href="{% static 'oscar/logo.jpg' %}" />
-{% endblock %}
+{% endblock %} -->
