--- a/templates/oscar/base.html
+++ b/templates/oscar/base.html
@@ -1,10 +1,16 @@
 {%  extends "oscar/base.html"%} 
 {%  load i18n %}
+{% load static %}
+
 
 {%  block title %}
 
-{%  trans ""%}
+{%  trans "Banana Gorilla Shirts"%}
 
 {%  endblock %}
+
+{% block favicon %}
+<link rel="shortcut icon" href="{% static 'logo.jpg' %}" />
+{% endblock %}
 
 
