--- a/templates/oscar/partials/brand.html
+++ b/templates/oscar/partials/brand.html
@@ -1,11 +1,11 @@
 {% extends "oscar/partials/brand.html" %}
 {% load i18n %}
-
+{% load static %}
 
 {% block brand_title %}
 
 
-
+<img src="{% static 'logo.jpg' %}" width="100" height="100">
 {% trans "Banana Gorilla Shirts" %}
 
 {% endblock %}
